--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ img {
     position: relative;
     color: #000;
     display: none;
-    background-image: url(/img/burger.svg);
+    background-image: url(../img/burger.svg);
     background-repeat: no-repeat;  
     background-position: center;
     background-size: cover;
